05-cicd-pipeline/cicd-demo/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-demo-deployment
  labels:
    app: cicd-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicd-demo
  template:
    metadata:
      labels:
        app: cicd-demo
    spec:
      containers:
      - name: cicd-demo-container
        image: projectgreenist/cicd-demo:initial
        ports:
        - containerPort: 3000
